Agrega el nombre del repositorio

--- a/ra2/tareas/t1.html
+++ b/ra2/tareas/t1.html
@@ -447,6 +447,63 @@ echo "Área = $area\n";
       </div>
     </section>
 
+    <!-- REPOSITORIO GITHUB -->
+    <section class="mt-5">
+      <h2 class="h4 mb-3"><i class="bi bi-github text-dark me-2"></i>Repositorio en GitHub (obligatorio)</h2>
+      <div class="card shadow-soft rounded-4 border-0">
+        <div class="card-body p-4">
+          <p class="mb-3">Cada estudiante deberá crear un repositorio con el nombre exacto:</p>
+<pre class="bg-light p-3 rounded-3 border"><code>area_rectangulo_IDE</code></pre>
+          <p class="mb-3">Estructura mínima recomendada del repositorio:</p>
+<pre class="bg-dark text-white p-3 rounded-3"><code>area_rectangulo_IDE/
+│
+├── src/
+│   ├── python/
+│   │   └── rectangulo.py
+│   ├── java/
+│   │   └── Rectangulo.java
+│   ├── c/
+│   │   └── rectangulo.c
+│   ├── javascript/
+│   │   └── rectangulo.mjs
+│   ├── php/
+│   │   └── rectangulo.php
+│   └── jsp/
+│       └── rectangulo.jsp
+│
+├── docs/
+│   ├── capturas/            ← capturas de pantalla por IDE
+│   ├── informe.pdf          ← comparativa de IDEs (1–2 páginas)
+│   └── matriz_pruebas.md    ← tabla IDE × lenguaje (o .xlsx)
+│
+└── README.md                ← descripción, instrucciones y versiones</code></pre>
+          <div class="row g-3">
+            <div class="col-lg-6">
+              <div class="glass rounded-4 p-3 h-100">
+                <h3 class="h6 mb-2">Contenido obligatorio de <code>README.md</code></h3>
+                <ul class="mb-0 small">
+                  <li>Descripción breve de la práctica.</li>
+                  <li>Lenguajes e IDEs utilizados (con versiones).</li>
+                  <li>Cómo compilar/ejecutar cada implementación.</li>
+                  <li>Plugins/extensiones instalados y su función.</li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="glass rounded-4 p-3 h-100">
+                <h3 class="h6 mb-2">Entrega en Moodle</h3>
+                <ul class="mb-0 small">
+                  <li>Entrega la <strong>URL pública</strong> de tu repositorio.</li>
+                  <li>Si el repo es privado, añade al profesor como colaborador.</li>
+                  <li>Incluye al menos 1 <em>release</em> o etiqueta con el estado final.</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Footer -->
     <footer class="py-5 text-center text-secondary">
       <div class="small">© 2025 — Práctica de Entornos de Desarrollo · Bootstrap 5</div>
